<resources>
    <string name="app_name">Plan\'Eat</string>
    <string name="recipes">Mes recettes</string>
    <string name="fridge">Mon frigo</string>
    <string name="shopping">Mes courses</string>
    <string name="planning">Mon calendrier</string>
    <string name="user">Mon profil</string>

    <!-- global -->
    <string name="yes">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="no">Non</string>
    <!-- /global -->

    <!-- connection -->
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="btn_signup">S\'enregitrer</string>
    <string name="registered">Enregistré !</string>
    <string name="btn_login">Connexion</string>
    <string name="wrong_login">Mauvais identifiant(s)</string>
    <!-- /connection -->

    <!-- user -->
    <string name="deconnection">Déconnexion</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="btn_modif">Sauver les changements</string>
    <string name="saved">Enregistré !</string>
    <string name="delete_user">Supprimer le compte</string>
    <string name="message_asking_suppression">Êtes-vous sûr ? (irréversible)</string>
    <string name="delete_done">Compte supprimé</string>
    <!-- /user -->

    <!-- recipes list -->
    <string name="search">Rechercher...</string>
    <string name="recipe_image">recipe image</string>
    <!-- /recipes list -->

    <!-- planning -->
    <string name="day_1">LUNDI</string>
    <string name="day_2">MARDI</string>
    <string name="day_3">MERCREDI</string>
    <string name="day_4">JEUDI</string>
    <string name="day_5">VENDREDI</string>
    <string name="day_6">SAMEDI</string>
    <string name="day_7">DIMANCHE</string>
    <string name="empty_recipe">VIDE</string>
    <string name="change">OK</string>
    <!-- /planning -->

    <!-- addRecipe -->
    <string name="hint_name"> Nom de la recette* </string>
    <string name="hint_description"> Description de la recette* </string>
    <string name="nbPerson_star">Nombre de personnes*</string>
    <string name="preparationTime_star">Temps de préparation*</string>
    <string name="difficulty_star">Dificulté* (de 0 à 5)</string>
    <string name="tittle_ingredients">Ingredients</string>
    <string name="hint_quantity_star">Qté*</string>
    <string name="hint_quantity">Qté</string>
    <string name="hint_ingredient_star">Ingrédient*</string>
    <string name="hint_ingredient">Ingrédient</string>
    <string name="tittle_preparation">Preparation</string>
    <string name="hint_firstStep">Première étape*</string>
    <string name="hint_otherStep">Etape suivante</string>
    <string name="invalid_difficulty">La dificulté doit être comprise entre 0 et 5</string>
    <string name="invalid_completion">Les champs marqués d\'une * sont obligatoire.</string>
    <!-- /addRecipe -->


    <!-- showRecipe -->
    <string name="nbPerson">Nombre de personnes</string>
    <string name="preparationTime">Temps de préparation</string>
    <string name="cookingTime">Temps de cuisson</string>
    <string name="difficulty">Dificulté</string>
    <!-- /showRecipe -->

    <!-- Unities -->
    <string-array name="unity_array">
        <item>-</item>
        <item>g</item>
        <item>kg</item>
        <item>cl</item>
        <item>L</item>
        <item>unité</item>
    </string-array>
    <!-- /Unities -->

    <!-- fridge -->
    <string name="ingredient_name">Nom ingrédient</string>
    <!-- /fridge -->

    <!-- addRecipe -->
    <string name="hint_name"> Nom de la recette* </string>
    <string name="hint_description"> Description de la recette* </string>
    <string name="nbPerson_star">Nombre de personnes*</string>
    <string name="preparationTime_star">Temps de préparation*</string>
    <string name="difficulty_star">Dificulté* (de 0 à 5)</string>
    <string name="tittle_ingredients">Ingredients</string>
    <string name="hint_quantity_star">Qté*</string>
    <string name="hint_quantity">Qté</string>
    <string name="hint_ingredient_star">Ingrédient*</string>
    <string name="hint_ingredient">Ingrédient</string>
    <string name="tittle_preparation">Preparation</string>
    <string name="hint_firstStep">Première étape*</string>
    <string name="hint_otherStep">Etape suivante</string>
    <string name="invalid_difficulty">La dificulté doit être comprise entre 0 et 5</string>
    <string name="invalid_completion">Les champs marqués d\'une * sont obligatoire.</string>
    <!-- /addRecipe -->


    <!-- showRecipe -->
    <string name="nbPerson">Nombre de personnes</string>
    <string name="preparationTime">Temps de préparation</string>
    <string name="cookingTime">Temps de cuisson</string>
    <string name="difficulty">Dificulté</string>
    <!-- /showRecipe -->

    <!-- Unities -->
    <string-array name="unity_array">
        <item>-</item>
        <item>g</item>
        <item>kg</item>
        <item>cl</item>
        <item>L</item>
        <item>unité</item>
    </string-array>
    <!-- /Unities -->

    <string name="activity_recipes">ACTIVITY RECIPES</string>
    <string name="activity_recipe">ACTIVITY RECIPE</string>
    <string name="activity_user">ACTIVITY USER</string>
    <string name="activity_planning">ACTIVITY PLANNING</string>
    <string name="activity_fridge">ACTIVITY FRIDGE</string>
    <string name="activity_shopping">ACTIVITY SHOPPING</string>


    <string name="facebook_app_id">1968130033267796</string>
    <string name="fb_login_protocol_scheme">fb1968130033267796</string>



</resources>
