<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_menu_recipes"
        android:title="@string/recipes" />

    <item
        android:id="@+id/navigation_fridge"
        android:icon="@drawable/ic_menu_fridge"
        android:title="@string/fridge" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_menu_shoppinglist"
        android:title="@string/shopping" />

    <item
        android:id="@+id/navigation_planning"
        android:icon="@drawable/ic_menu_planing"
        android:title="@string/planning" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_menu_user"
        android:title="@string/user" />

</menu>
