<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/message_asking_suppression"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/color_danger"
            android:textColor="@android:color/white"
            android:text="@string/yes"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="0.4"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_gravity="end"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="0.4"/>
    </LinearLayout>

</LinearLayout>