<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
<!--
        <EditText
            android:id="@+id/idRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
-->

        <!-- Name of the recipe -->
        <TextView
            android:id="@+id/RecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:layout_marginVertical="7dp"/>

        <!-- Add picture -->
        <ImageView
            android:id="@+id/RecipePicture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/im_picture" />

        <!-- Description -->
        <TextView
            android:id="@+id/RecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginVertical="7dp"/>

        <!-- Tags -->
        <!-- TODO : Show tags -->
        <!-- Button open a pop-up with checkboxes and ok, after ok, tags selected are showed -->

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- Number of person and Times -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/RecipeNbPeopleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/nbPerson" />

            <TextView
                android:id="@+id/RecipeForNbPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/RecipePreparationTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/preparationTime" />

            <TextView
                android:id="@+id/RecipePreparationTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- Dificulty -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/RecipeDifficultyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/difficulty" />

            <TextView
                android:id="@+id/RecipeDifficultyLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- Ingredients list-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/IngredientSectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/tittle_ingredients"
                android:textSize="20dp"/>

            <LinearLayout
                android:id="@+id/IngredientSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- Preparation list -->
        <LinearLayout
            android:id="@+id/PreparationSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PreparationSectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/tittle_preparation"
                android:textSize="20dp"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addToPlanningButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Ajouter au Planning"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/addToMarketButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Ajouter au courses"
                android:textSize="12dp"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
